--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://img.icons8.com/?size=100&id=vpZ1dBgCBtjZ&format=png&color=000000" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cutting-edge Portfolio Website for Madhappan T</title>
+    <title>Portfolio Website for Madhappan T</title>
   </head>
   <body>
     <div id="root"></div>
